--- a/html/index.html
+++ b/html/index.html
@@ -1,16 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="../css/teaStore.css" rel="stylesheet">
     <title>Teastore</title>
 </head>
-<body>
+<header>
     <div class="container">
-        <h1>Teastore</h1>
-        <ul id="teaList"></ul>
+        <div class="row">
+            <div class="col-lg-12 col-sm-12 col-12 main-section">
+                <div class="dropdown btn-sm float-right">
+                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                        aria-haspopup="true" aria-expanded="false">
+                        <span class="glyphicon">Shopping cart</span>
+                    </button>
+                    <div class="dropdown-menu">
+                        <div class="row total-header-section p-2 border" id="item">
+                            <div class="row">
+                                <div class="col-12 col-sm-12 col-md-2">
+                                        <img class="img-responsive" src="http://placehold.it/120x80" alt="prewiew" width="120" height="80">
+                                </div>
+                                <div class="col-10 col-sm-10 text-md-right col-md-6">
+                                    <h4 class="product-name"><strong>Product Name</strong></h4>
+                                    <h4>
+                                        <small>200:-/hg</small>
+                                    </h4>
+                                </div>
+                                <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row cen">
+                                    <div class="col-5 col-sm-5 col-md-6">
+                                        <p><strong>25<span class="text-muted">x</span></strong></p>
+                                    </div>
+                                    <div class="col-4 col-sm-4 col-md-4">
+                                        <div class="quantity">
+                                            <input type="button" value="+" class="plus">
+                                            <input type="number" step="1" max="99" min="1" value="1" title="Qty" class="qty"
+                                                   size="4">
+                                            <input type="button" value="-" class="minus">
+                                        </div>
+                                    </div>
+                                
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 col-sm-12 col-12 text-center checkout">
+                                <button class="btn btn-primary btn-block">Checkout</button>
+                                <button class="btn btn-primary btn-block">Empty</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+            </div>
+</header>
+
+<body>
+
+
+    <div class="container">
+        <div class="row w-75">
+            <div class="col">
+                <ul class="list-group" id="tea-list"></ul>
+            </div>
+        </div>
+
+
+        <!-- <ul id="teaList"></ul> -->
+
         <div class="teaOne">
             <div class="teaName">
                 <h4>Black tea</h4>
@@ -19,27 +78,34 @@
                 <img src="../teaPics/blackTea.jpg" width="100" height="100" alt="Black tea">
             </div>
             <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aspernatur    
-                 repudiandae eos fugit tempore fuga ipsam est pariatur officia eius error
-                  expedita sed fugiat sint blanditiis repellat obcaecati, illum quidem?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aspernatur
+                repudiandae eos fugit tempore fuga ipsam est pariatur officia eius error
+                expedita sed fugiat sint blanditiis repellat obcaecati, illum quidem?
             </div>
             <div class="price">
                 <p>200:-/hg</p>
             </div>
             <div>
-                <button type="button" class="btn btn-success">+</button> 
+                <button type="button" class="btn btn-success">+</button>
                 <input type="text" id="number" size="1" name="number">
-                <button type="button" class="btn btn-success">-</button> 
-                <button type="button" class="btn btn-success">add to cart</button> 
+                <button type="button" class="btn btn-success">-</button>
+                <button type="button" class="btn btn-success">add to cart</button>
             </div>
         </div>
-
-
     </div>
 
 
-
     <script src="../js/jquery-3.4.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
     <script src="../js/teaStore.js"></script>
 </body>
+
 </html>
