--- a/html/index.html
+++ b/html/index.html
@@ -9,90 +9,77 @@
     <link href="../css/teaStore.css" rel="stylesheet">
     <title>Teastore</title>
 </head>
-<header>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12 col-sm-12 col-12 main-section">
-                <div class="dropdown btn-sm float-right">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        <span class="glyphicon">Shopping cart</span>
-                    </button>
-                    <div class="dropdown-menu">
-                        <div class="row total-header-section p-2 border" id="item">
-                            <div class="row">
-                                <div class="col-12 col-sm-12 col-md-2">
-                                        <img class="img-responsive" src="http://placehold.it/120x80" alt="prewiew" width="120" height="80">
-                                </div>
-                                <div class="col-10 col-sm-10 text-md-right col-md-6">
-                                    <h4 class="product-name"><strong>Product Name</strong></h4>
-                                    <h4>
-                                        <small>200:-/hg</small>
-                                    </h4>
-                                </div>
-                                <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row cen">
-                                    <div class="col-5 col-sm-5 col-md-6">
-                                        <p><strong>25<span class="text-muted">x</span></strong></p>
+
+<body>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-sm-12 col-12 main-section">
+                    <div class="dropdown btn-sm float-right">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            <span class="glyphicon">Shopping cart</span>
+                        </button>
+                        <div class="dropdown-menu">
+                            <div class="row total-header-section p-2 border" id="item">
+                                <div class="row">
+                                    <div class="col-12 col-sm-12 col-md-2">
+                                        <img class="img-responsive" src="http://placehold.it/120x80" alt="prewiew"
+                                            width="120" height="80">
                                     </div>
-                                    <div class="col-4 col-sm-4 col-md-4">
-                                        <div class="quantity">
-                                            <input type="button" value="+" class="plus">
-                                            <input type="number" step="1" max="99" min="1" value="1" title="Qty" class="qty"
-                                                   size="4">
-                                            <input type="button" value="-" class="minus">
+                                    <div class="col-10 col-sm-10 text-md-right col-md-6">
+                                        <h4 class="product-name"><strong>Product Name</strong></h4>
+                                        <h4>
+                                            <small>200:-/hg</small>
+                                        </h4>
+                                    </div>
+                                    <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row cen">
+                                        <div class="col-5 col-sm-5 col-md-6">
+                                            <p><strong>25<span class="text-muted">x</span></strong></p>
                                         </div>
+                                        <div class="col-4 col-sm-4 col-md-4">
+                                            <div class="quantity">
+                                                <input type="button" value="+" class="plus">
+                                                <input type="number" step="1" max="99" min="1" value="1" title="Qty"
+                                                    class="qty">
+                                                <!--size 4?-->
+                                                <input type="button" value="-" class="minus">
+                                            </div>
+                                        </div>
+
                                     </div>
-                                
                                 </div>
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-12 col-sm-12 col-12 text-center checkout">
-                                <button class="btn btn-primary btn-block">Checkout</button>
-                                <button class="btn btn-primary btn-block">Empty</button>
+                            <div class="row">
+                                <div class="col-lg-12 col-sm-12 col-12 text-center checkout">
+                                    <button class="btn btn-primary btn-block">Checkout</button>
+                                    <button class="btn btn-primary btn-block">Empty</button>
                                 </div>
                             </div>
                         </div>
                     </div>
+                </div>
             </div>
-</header>
+        </div>
 
-<body>
+    </header>
+
 
 
     <div class="container">
         <div class="row w-75">
             <div class="col">
-                <ul class="list-group" id="tea-list"></ul>
-            </div>
-        </div>
-
-
-        <!-- <ul id="teaList"></ul> -->
-
-        <div class="teaOne">
-            <div class="teaName">
-                <h4>Black tea</h4>
-            </div>
-            <div class="image">
-                <img src="../teaPics/blackTea.jpg" width="100" height="100" alt="Black tea">
-            </div>
-            <div class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis aspernatur
-                repudiandae eos fugit tempore fuga ipsam est pariatur officia eius error
-                expedita sed fugiat sint blanditiis repellat obcaecati, illum quidem?
-            </div>
-            <div class="price">
-                <p>200:-/hg</p>
-            </div>
-            <div>
-                <button type="button" class="btn btn-success">+</button>
-                <input type="text" id="number" size="1" name="number">
-                <button type="button" class="btn btn-success">-</button>
-                <button type="button" class="btn btn-success">add to cart</button>
+                <ul class="list-group" id="tea-list">
+                    
+                </ul>
             </div>
         </div>
     </div>
+
+
+    <!-- <ul id="teaList"></ul> -->
+
+
 
 
     <script src="../js/jquery-3.4.1.js"></script>
