--- a/html/index.html
+++ b/html/index.html
@@ -46,14 +46,13 @@
                                                 <input type="button" value="-" class="minus">
                                             </div>
                                         </div>
-
                                     </div>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 col-sm-12 col-12 text-center checkout">
-                                    <button class="btn btn-primary btn-block">Checkout</button>
-                                    <button class="btn btn-primary btn-block">Empty</button>
+                                    <button class="btn btn-primary btn-danger">Checkout</button>
+                                    <button class="btn btn-primary btn-danger">Empty</button>
                                 </div>
                             </div>
                         </div>
@@ -64,23 +63,15 @@
 
     </header>
 
-
-
-    <div class="container">
+    <div class="container" id="listProducts">
         <div class="row w-75">
             <div class="col">
-                <ul class="list-group" id="tea-list">
-                    
-                </ul>
+                <ul class="list-group" id="tea-list"></ul>
             </div>
         </div>
     </div>
 
-
     <!-- <ul id="teaList"></ul> -->
-
-
-
 
     <script src="../js/jquery-3.4.1.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
