--- a/html/index.html
+++ b/html/index.html
@@ -52,7 +52,7 @@
                             <div class="row">
                                 <div class="col-lg-12 col-sm-12 col-12 text-center checkout">
                                     <button class="btn btn-primary btn-danger">Checkout</button>
-                                    <button class="btn btn-primary btn-danger">Empty</button>
+                                    <button class="btn btn-primary btn-danger" onclick="emptyCart()">Empty</button>
                                 </div>
                             </div>
                         </div>
