--- a/html/index.html
+++ b/html/index.html
@@ -21,33 +21,7 @@
                             <span class="glyphicon">Shopping cart</span>
                         </button>
                         <div class="dropdown-menu">
-                            <div class="row total-header-section p-2 border" id="item">
-                                <div class="row">
-                                    <div class="col-12 col-sm-12 col-md-2">
-                                        <img class="img-responsive" src="http://placehold.it/120x80" alt="prewiew"
-                                            width="120" height="80">
-                                    </div>
-                                    <div class="col-10 col-sm-10 text-md-right col-md-6">
-                                        <h4 class="product-name"><strong>Product Name</strong></h4>
-                                        <h4>
-                                            <small>200:-/hg</small>
-                                        </h4>
-                                    </div>
-                                    <div class="col-12 col-sm-12 text-sm-center col-md-4 text-md-right row cen">
-                                        <div class="col-5 col-sm-5 col-md-6">
-                                            <p><strong>25<span class="text-muted">x</span></strong></p>
-                                        </div>
-                                        <div class="col-4 col-sm-4 col-md-4">
-                                            <div class="quantity">
-                                                <input type="button" value="+" class="plus">
-                                                <input type="number" step="1" max="99" min="1" value="1" title="Qty"
-                                                    class="qty">
-                                                <!--size 4?-->
-                                                <input type="button" value="-" class="minus">
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="col-12 col-sm-12 col-md-2" id="cart-items">
                             </div>
                             <div class="row">
                                 <div class="col-lg-12 col-sm-12 col-12 text-center checkout">
@@ -61,7 +35,6 @@
             </div>
         </div>
 
-    </header>
 
     <div class="container" id="listProducts">
         <div class="row w-75">
