--- a/html/index.html
+++ b/html/index.html
@@ -21,8 +21,8 @@
                             <span class="glyphicon">Shopping cart</span>
                         </button>
                         <div class="dropdown-menu">
-                            <div class="col-12 col-sm-12 col-md-2" id="cart-items">
-                            </div>
+                            <ul class="list-group" id="cart-list"></ul>
+
                             <div class="row">
                                 <div class="col-lg-12 col-sm-12 col-12 text-center checkout">
                                     <button class="btn btn-primary btn-danger">Checkout</button>
@@ -30,7 +30,7 @@
                                 </div>
                             </div>
                         </div>
-                        
+
                     </div>
                 </div>
             </div>
