New shopping cart!

--- a/html/index.html
+++ b/html/index.html
@@ -27,7 +27,7 @@
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
                             <span>Shopping cart</span>
                         </button>
-                        <div class="dropdown-menu">
+                        <div id="cart-dropdown" class="dropdown-menu">
                             <ul class="list-group" id="cart-list">
                                 
                             </ul>
