--- a/html/index.html
+++ b/html/index.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-lg-12 col-sm-12 col-12 main-section">
                     <div class="dropdown btn-sm float-right">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                             <span>Shopping cart</span>
                         </button>
                         <div id="cart-dropdown" class="dropdown-menu">
