--- a/html/orderconfirmation.html
+++ b/html/orderconfirmation.html
@@ -13,9 +13,17 @@
 <body>
     <header>
         <div class="container">
+            <div class="row" id="background">
+                <div class="jumbotron" id="title">
+                    <h1>Tea Store</h1>
+                    <hr class="my-4">
+                    <p id="cite"><cite>I like tea and yoga, but I don’t do yoga.
+                        </cite>-Moby</p>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-lg-12 col-sm-12 col-12 main-section">
-                    <button class="home-button btn btn-primary btn-danger float-right">Home</button>
+                    <button class="home-button btn btn-primary btn-success float-right">Home</button>
                 </div>
             </div>
         </div>
@@ -29,6 +37,7 @@
             </div>
         </div>
 
+        <br>
 
         <div class="container">
             <div class="row">
